VFS-5151 fixed too long strings in info tile

--- a/app/styles/onedata-gui-common/components/resource-info-tile.scss
+++ b/app/styles/onedata-gui-common/components/resource-info-tile.scss
@@ -9,6 +9,7 @@
         padding-top: 2 * $table-condensed-cell-padding;
         padding-bottom: 2 * $table-condensed-cell-padding;
         border-top: 0;
+        word-break: break-word;
       }
     }
   }
